# markdown-toc

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  DEVELOPING.md  LICENSE  README.md  cookiecutter-config.yaml  markdown-toc  prospector_profile.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
dev/: requirements_ci.txt  requirements_dev.txt  requirements_test.txt
docs/: config_sphinx_local.py
markdown_toc/: __init__.py  __main__.py  cli.py  completion.py  mdfile.py
src/markdown_toc/: __init__.py  __main__.py  completion.py  iofile.py  mdfile.py
tests/: ruff.toml
util/: build-docs.sh  check-docs.sh  clean.sh  create-conda-env.sh  create-venv.sh  freeze-requirements.sh  python-venv.py  remove-conda-env.sh  remove-venv.sh  run-tests.sh  tag-version.py  update-version.py
util/pre-commit-tools/: README.md
